src/test/deca/syntax/valid/homemade/test/test_lex_val_affectation_booleen.deca
// Description:
//    Programme minimaliste testant une affectation de booléen.
//
// Resultats:
//    je
//     suis
//
// Historique:
//    cree le 01/01/2023

{
        bool i = false;
}